--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,8 @@
 @use 'base/base-styles';
 @use 'base/typography';
 
+@use 'components/buttons';
+
 @use 'layout/navigation';
 @use 'layout/header';
 @use 'layout/main';
