--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -18,5 +18,5 @@ $white: hsl(0, 0%, 100%);
 
 // Typography
 $default-font-size: 1.4rem;
-$font-family: "Open Sans", sans-serif;
-$font-family-heading: "Raleway", sans-serif;
+$default-font: "Open Sans", sans-serif;
+$raleway-font: "Raleway", sans-serif;
