--- a/scss/base/_base-styles.scss
+++ b/scss/base/_base-styles.scss
@@ -1,11 +1,24 @@
 @use '../abstracts/variables' as *;
 
+* {
+  list-style-type: none;
+  text-decoration: none;
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
   font-size: $default-font-size;
-  font-family: $font-family;
+  font-family: $default-font;
   font-weight: 400;
+  width: 100%;
+  max-width: 1440px;
+  background-color: $dark-blue-main-bg;
+  background: #aca9a9;
+}
+
+.container {
+  padding: 0 2rem;
 }
