--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 3rem 0;
+  margin-top: 2rem;
 
   &__logo-box {
     flex-basis: 25%;
