--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -5,3 +5,18 @@
   font-size: 2.4rem;
   font-weight: 700;
 }
+
+// FEATURE Section
+//------------------------------------
+.feature {
+  &__heading {
+    font-size: 1.7rem;
+    font-weight: 700;
+    color: $white;
+    margin: 2rem auto 1.5rem;
+  }
+
+  &__text {
+    color: darken($color: $white, $amount: 5%);
+  }
+}
