--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,10 @@
 @use 'abstracts/variables';
-
 @use 'base/reset';
 @use 'base/base-styles';
 @use 'base/typography';
 
 @use 'components/buttons';
+@use 'components/card';
 
 @use 'layout/navigation';
 @use 'layout/header';
