--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,57 @@ body {
   font-size: 8px;
 }
 
+.card {
+  width: 95%;
+  height: auto;
+  margin: 0 auto;
+  background: #202a3c;
+  border: 0.7rem solid #1c2431;
+  border-radius: 0.8rem;
+  padding: 2rem 1.8rem;
+  font-family: "Open Sans", sans-serif;
+  margin-bottom: 2.5rem;
+  position: relative;
+}
+.card__text {
+  font-size: 1.155rem;
+  line-height: 2;
+  color: #cccccc;
+  margin-bottom: 1.5rem;
+}
+.card__reviewer {
+  display: flex;
+}
+.card__reviewer-img {
+  width: 4rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-right: 10px;
+}
+.card__reviewer-name h4 {
+  font-size: 1.3rem;
+  font-weight: 400;
+  color: white;
+  margin-bottom: 4px;
+}
+.card__reviewer-name p {
+  font-size: 1rem;
+  color: #bfbfbf;
+}
+
+.card--1::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: url("../images/bg-quotes.png");
+  background-repeat: no-repeat;
+  top: -2.5rem;
+  left: 0;
+  background-size: 30px;
+}
+
 .navbar {
   width: 100%;
   display: flex;
@@ -240,4 +291,15 @@ body {
 
 .productive {
   margin: 3rem auto 0;
+}
+
+.testimonial {
+  margin: 15rem auto;
+}
+.testimonial .cards {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }/*# sourceMappingURL=main.css.map */
