--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -29,3 +29,17 @@
 .productive {
   margin: 3rem auto 0;
 }
+
+// Testimonial Section
+//------------------------------------
+
+.testimonial {
+  margin: 15rem auto;
+  .cards {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+}
