--- a/css/main.css
+++ b/css/main.css
@@ -225,6 +225,44 @@ body {
   background-size: 30px;
 }
 
+.subscribe .form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.subscribe .form input[type=email],
+.subscribe .form button {
+  width: 100%;
+  height: auto;
+  padding: 1.1rem 0;
+  border-radius: 5rem;
+  border: none;
+}
+.subscribe .form input:focus,
+.subscribe .form input:active {
+  outline: none;
+}
+.subscribe .form input[type=email]::-moz-placeholder {
+  color: #999999;
+}
+.subscribe .form input[type=email]:-ms-input-placeholder {
+  color: #999999;
+}
+.subscribe .form input[type=email]::placeholder {
+  color: #999999;
+}
+.subscribe .form input[type=email] {
+  margin-bottom: 2.5rem;
+  padding-left: 3rem;
+}
+.subscribe .form button {
+  background: linear-gradient(to right, #65e2d9, #47a8d1);
+  color: white;
+  font-size: 1.4rem;
+  text-transform: capitalize;
+}
+
 .navbar {
   width: 100%;
   display: flex;
@@ -302,4 +340,14 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.subscribe {
+  margin-bottom: 6rem;
+}
+.subscribe .container {
+  width: 90%;
+  background: #1c2431;
+  border-radius: 8px;
+  padding: 3.5rem 2.8rem 3rem;
 }/*# sourceMappingURL=main.css.map */
