--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $dark-blue-testimonial-bg: hsl(219, 30%, 18%);
 $cyan: hsl(176, 68%, 64%);
 $blue: hsl(198, 60%, 55%);
 $light-red: hsl(0, 100%, 63%);
+$light-green: hsl(162, 48%, 49%);
 
 // Neutral
 $white: hsl(0, 0%, 100%);
