--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -8,7 +8,7 @@
   height: auto;
   margin: 0 auto;
   background: $dark-blue-testimonial-bg;
-  border: 0.7rem solid $dark-blue-misc-bg;
+  border: 0.7rem solid $dark-blue-main-bg;
   border-radius: 0.8rem;
   padding: 2rem 1.8rem;
   font-family: $default-font;
