--- a/css/main.css
+++ b/css/main.css
@@ -89,19 +89,34 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   width: 100%;
-  max-width: 1440px;
-  background-color: #181f2a;
+  background-color: #1c2431;
 }
 
 .container {
   width: 85%;
   margin: 0 auto;
 }
+@media screen and (min-width: 1024px) {
+  .container {
+    width: 100%;
+  }
+}
 
 .main-heading {
   font-family: "Raleway", sans-serif;
   font-size: 2.4rem;
   font-weight: 700;
+}
+@media screen and (min-width: 1024px) {
+  .main-heading {
+    width: 30%;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .main-heading {
+    font-size: 3.5rem;
+  }
 }
 
 .feature__heading {
@@ -116,6 +131,13 @@ body {
 
 .productive .feature__heading {
   margin-top: 5rem;
+}
+@media screen and (min-width: 1024px) {
+  .productive .feature__heading {
+    font-size: 2.8rem;
+    width: 80%;
+    margin: 0;
+  }
 }
 .productive p {
   color: #f2f2f2;
@@ -191,7 +213,7 @@ body {
   height: auto;
   margin: 0 auto;
   background: #202a3c;
-  border: 0.7rem solid #1c2431;
+  border: 0.7rem solid #181f2a;
   border-radius: 0.8rem;
   padding: 2rem 1.8rem;
   font-family: "Open Sans", sans-serif;
@@ -288,30 +310,76 @@ body {
   align-items: center;
   margin-top: 2rem;
 }
+@media screen and (min-width: 769px) {
+  .navbar {
+    width: 85%;
+    max-width: 1440px;
+    margin: 3.5rem auto 8rem;
+  }
+}
 .navbar__logo-box {
   flex-basis: 25%;
+}
+@media screen and (min-width: 769px) {
+  .navbar__logo-box {
+    flex-basis: 10%;
+  }
 }
 .navbar__list {
   flex: 1;
   display: flex;
   justify-content: space-between;
 }
+@media screen and (min-width: 769px) {
+  .navbar__list {
+    justify-content: end;
+  }
+  .navbar__list .navbar__item {
+    margin-left: 4.5rem;
+  }
+}
 .navbar__link {
   font-family: "Raleway", sans-serif;
   color: white;
 }
+@media screen and (min-width: 769px) {
+  .navbar__link {
+    font-size: 1.6rem;
+  }
+}
 
-.header__intro-wrapper {
-  background: url("../images/bg-curvy-mobile.svg");
+.header {
+  width: 100%;
+  background: url("../images/bg-curvy-mobile.svg"), linear-gradient(#1c2431 60%, #181f2a 40%);
   background-repeat: no-repeat;
-  background-position: top;
+  background-position: center;
+  background-size: 100%;
+}
+@media screen and (min-width: 1024px) {
+  .header {
+    background: url("../images/bg-curvy-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: bottom;
+    padding-bottom: 6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 .header__intro-img {
   width: 85%;
   margin: 0 auto;
   position: relative;
   top: 4rem;
-  right: 1rem;
+}
+@media screen and (min-width: 1024px) {
+  .header__intro-img {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    top: 0;
+  }
 }
 .header__intro {
   color: white;
@@ -326,13 +394,37 @@ body {
   line-height: 1.6;
   color: #f2f2f2;
 }
+@media screen and (min-width: 1024px) {
+  .header__intro-text {
+    width: 30%;
+    margin: 2.5rem auto;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .header__intro-text {
+    width: 25%;
+  }
+}
+
+.main {
+  background-color: #181f2a;
+}
 
 .features {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
   text-align: center;
   padding: 6rem 0;
+}
+@media screen and (min-width: 1024px) {
+  .features {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .features .feature {
   width: 100%;
@@ -341,12 +433,38 @@ body {
   flex-direction: column;
   align-items: center;
 }
+@media screen and (min-width: 1024px) {
+  .features .feature {
+    width: 30%;
+    margin: 5rem 4rem;
+  }
+}
 .features .feature img {
   width: 20%;
+}
+@media screen and (min-width: 1024px) {
+  .features .feature img {
+    width: auto;
+    height: 100px;
+  }
 }
 
 .productive {
   margin: 3rem auto 0;
+}
+@media screen and (min-width: 1024px) {
+  .productive .container {
+    width: 75%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  .productive .container .productive-img {
+    width: 50%;
+  }
+  .productive .container .productive-texts {
+    width: 42%;
+  }
 }
 
 .testimonial {
@@ -365,7 +483,7 @@ body {
 }
 .subscribe .container {
   width: 90%;
-  background: #1c2431;
+  background: #181f2a;
   border-radius: 8px;
   padding: 3.5rem 2.8rem 3rem;
 }
