--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -3,7 +3,8 @@
 
 // Colors
 // Primary
-$dark-blue-misc-bg: hsl(217, 28%, 15%);
+
+$dark-blue-intro-bg: hsl(217, 28%, 15%);
 $dark-blue-main-bg: hsl(218, 28%, 13%);
 $dark-blue-footer-bg: hsl(216, 53%, 9%);
 $dark-blue-testimonial-bg: hsl(219, 30%, 18%);
