--- a/scss/base/_base-styles.scss
+++ b/scss/base/_base-styles.scss
@@ -14,12 +14,14 @@ body {
   font-family: $default-font;
   font-weight: 400;
   width: 100%;
-  max-width: 1440px;
-  background-color: $dark-blue-main-bg;
-  // background: #aca9a9;
+  background-color: $dark-blue-intro-bg;
 }
 
 .container {
   width: 85%;
   margin: 0 auto;
+
+  @media screen and (min-width: 1024px) {
+    width: 100%;
+  }
 }
