--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -4,6 +4,15 @@
   font-family: $raleway-font;
   font-size: 2.4rem;
   font-weight: 700;
+
+  @media screen and (min-width: 1024px) {
+    width: 30%;
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: 1600px) {
+    font-size: 3.5rem;
+  }
 }
 
 // FEATURE Section
@@ -26,6 +35,12 @@
 .productive {
   .feature__heading {
     margin-top: 5rem;
+
+    @media screen and (min-width: 1024px) {
+      font-size: 2.8rem;
+      width: 80%;
+      margin: 0;
+    }
   }
 
   p {
