--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -3,12 +3,24 @@
 // FEATURE Section
 //------------------------------------
 
+.main {
+  background-color: $dark-blue-main-bg;
+}
+
 .features {
-  width: 100%;
+  width: 90%;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
   text-align: center;
   padding: 6rem 0;
+
+  @media screen and (min-width: 1024px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
 
   .feature {
     width: 100%;
@@ -17,8 +29,18 @@
     flex-direction: column;
     align-items: center;
 
+    @media screen and (min-width: 1024px) {
+      width: 30%;
+      margin: 5rem 4rem;
+    }
+
     img {
       width: 20%;
+
+      @media screen and (min-width: 1024px) {
+        width: auto;
+        height: 100px;
+      }
     }
   }
 }
@@ -28,6 +50,23 @@
 
 .productive {
   margin: 3rem auto 0;
+
+  @media screen and (min-width: 1024px) {
+    & .container {
+      width: 75%;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+
+      & .productive-img {
+        width: 50%;
+      }
+
+      & .productive-texts {
+        width: 42%;
+      }
+    }
+  }
 }
 
 // Testimonial Section
@@ -50,7 +89,7 @@
   margin-bottom: 6rem;
   .container {
     width: 90%;
-    background: $dark-blue-misc-bg;
+    background: $dark-blue-main-bg;
     border-radius: 8px;
     padding: 3.5rem 2.8rem 3rem;
   }
