--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -7,18 +7,40 @@
   align-items: center;
   margin-top: 2rem;
 
+  @media screen and (min-width: 769px) {
+    width: 85%;
+    max-width: 1440px;
+    margin: 3.5rem auto 8rem;
+  }
+
   &__logo-box {
     flex-basis: 25%;
+
+    @media screen and (min-width: 769px) {
+      flex-basis: 10%;
+    }
   }
 
   &__list {
     flex: 1;
     display: flex;
     justify-content: space-between;
+
+    @media screen and (min-width: 769px) {
+      justify-content: end;
+
+      .navbar__item {
+        margin-left: 4.5rem;
+      }
+    }
   }
 
   &__link {
     font-family: $raleway-font;
     color: $white;
+
+    @media screen and (min-width: 769px) {
+      font-size: 1.6rem;
+    }
   }
 }
