--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -8,12 +8,15 @@
   height: auto;
   margin: 0 auto;
   background: $dark-blue-testimonial-bg;
-  border: 0.7rem solid $dark-blue-main-bg;
   border-radius: 0.8rem;
   padding: 2rem 1.8rem;
   font-family: $default-font;
   margin-bottom: 2.5rem;
   position: relative;
+
+  @media screen and (min-width: 1024px) {
+    width: 30%;
+  }
 
   &__text {
     font-size: 1.155rem;
