--- a/css/main.css
+++ b/css/main.css
@@ -185,9 +185,19 @@ body {
   padding: 0 0 5px 0;
   display: flex;
   align-items: center;
+  cursor: pointer;
+  transition: all 0.3s;
 }
 .how-it-work-btn .icon {
   margin-left: 5px;
+}
+.how-it-work-btn:hover {
+  color: white;
+  border-bottom: 1.8px solid white;
+}
+.how-it-work-btn:hover .fill {
+  fill: white;
+  transition: all 0.3s;
 }
 
 .form-btn {
@@ -199,7 +209,7 @@ body {
   transform: linear-gradient 0.5s;
 }
 .form-btn:hover {
-  background: linear-gradient(90deg, #47a8d1, #65e2d9);
+  background: #65e2d9;
 }
 
 .cta:focus,
@@ -213,12 +223,16 @@ body {
   height: auto;
   margin: 0 auto;
   background: #202a3c;
-  border: 0.7rem solid #181f2a;
   border-radius: 0.8rem;
   padding: 2rem 1.8rem;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 2.5rem;
   position: relative;
+}
+@media screen and (min-width: 1024px) {
+  .card {
+    width: 30%;
+  }
 }
 .card__text {
   font-size: 1.155rem;
@@ -265,6 +279,17 @@ body {
   align-items: center;
   flex-direction: column;
 }
+.subscribe .form-control {
+  width: 100%;
+}
+@media screen and (min-width: 1024px) {
+  .subscribe .form {
+    width: 80%;
+    margin: 0 auto;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+}
 .subscribe .form input[type=email],
 .subscribe .form button {
   width: 100%;
@@ -272,6 +297,24 @@ body {
   padding: 1.1rem 0;
   border-radius: 5rem;
   border: none;
+}
+@media screen and (min-width: 1024px) {
+  .subscribe .form input[type=email] {
+    width: 100%;
+  }
+  .subscribe .form button {
+    width: 80%;
+    margin-left: 2rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .subscribe .form input[type=email] {
+    width: 100%;
+  }
+  .subscribe .form button {
+    width: 60%;
+    margin-left: 2rem;
+  }
 }
 .subscribe .form input:focus,
 .subscribe .form input:active {
@@ -295,6 +338,8 @@ body {
   line-height: 0;
   margin-bottom: 2rem;
   font-size: 11px;
+  text-align: left;
+  margin-left: 3rem;
 }
 .subscribe .form .validation-text.success {
   color: #41b995;
@@ -340,6 +385,10 @@ body {
 }
 .navbar__link {
   font-family: "Raleway", sans-serif;
+  color: #d9d9d9;
+  transition: all 0.3s;
+}
+.navbar__link:hover {
   color: white;
 }
 @media screen and (min-width: 769px) {
@@ -468,7 +517,7 @@ body {
 }
 
 .testimonial {
-  margin: 15rem auto;
+  padding: 25rem 0;
 }
 .testimonial .cards {
   width: 100%;
@@ -477,21 +526,60 @@ body {
   align-items: center;
   flex-direction: column;
 }
-
-.subscribe {
-  margin-bottom: 6rem;
+@media screen and (min-width: 1024px) {
+  .testimonial .cards {
+    width: 70%;
+    margin: 0 auto;
+    flex-direction: row;
+  }
 }
-.subscribe .container {
-  width: 90%;
-  background: #181f2a;
-  border-radius: 8px;
-  padding: 3.5rem 2.8rem 3rem;
+
+.footer {
+  background-color: #0b1523;
+  position: relative;
 }
 
 .footer {
   width: 100%;
-  padding: 3rem 0 4rem;
+  padding: 3rem 0 2rem;
   color: #cccccc;
+}
+.footer__logo {
+  width: 85%;
+  margin: 0 auto;
+  margin-bottom: 3rem;
+}
+.footer__logo img {
+  width: 150px;
+}
+
+@media screen and (min-width: 1024px) {
+  section:last-of-type {
+    position: relative;
+    top: -8rem;
+  }
+
+  .attribution {
+    position: absolute;
+    left: 50%;
+    top: 90%;
+    transform: translateX(-50%);
+  }
+}
+.subscribe {
+  position: relative;
+  top: -17rem;
+}
+.subscribe .container {
+  width: 90%;
+  background: #1c2431;
+  border-radius: 8px;
+  padding: 3.5rem 2.8rem 3rem;
+}
+@media screen and (min-width: 1024px) {
+  .subscribe .container {
+    width: 50%;
+  }
 }
 
 .row {
@@ -501,6 +589,17 @@ body {
 .row > *:not(:first-of-type) {
   margin-bottom: 3rem;
 }
+@media screen and (min-width: 1024px) {
+  .row {
+    display: flex;
+  }
+  .row > *:not(:first-of-type) {
+    margin-bottom: 0;
+  }
+  .row > * {
+    width: 25%;
+  }
+}
 
 .footer__info {
   display: flex;
@@ -508,6 +607,12 @@ body {
 }
 .footer__info img {
   margin-right: 2.5rem;
+}
+@media screen and (min-width: 1024px) {
+  .footer__info {
+    align-items: flex-start;
+    margin-bottom: 2rem;
+  }
 }
 
 .col a {
@@ -528,9 +633,26 @@ body {
 .footer__info--col-1 {
   margin: 4rem 0 1rem;
 }
+@media screen and (min-width: 1024px) {
+  .footer__info--col-1 {
+    margin: 0;
+  }
+}
 
 .col-2 p {
   margin: 1rem 0;
+}
+@media screen and (min-width: 1024px) {
+  .col-2 {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10%;
+    justify-content: flex-start;
+  }
+  .col-2 p {
+    margin: 0;
+  }
 }
 
 .col-3 {
@@ -545,14 +667,41 @@ body {
 .col-3 ul:last-child {
   margin-top: 5rem;
 }
+@media screen and (min-width: 1024px) {
+  .col-3 {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0;
+  }
+  .col-3 ul {
+    margin: 0;
+  }
+  .col-3 ul li:first-child {
+    margin-top: 0;
+  }
+  .col-3 ul:last-child {
+    margin-top: 0;
+    margin-left: 5rem;
+  }
+}
 
 .col-4 {
   padding-top: 3rem;
   text-align: center;
 }
+@media screen and (min-width: 1024px) {
+  .col-4 {
+    padding-top: 0;
+  }
+}
 .col-4 .social-icons {
   display: flex;
   justify-content: center;
+}
+@media screen and (min-width: 1024px) {
+  .col-4 .social-icons {
+    justify-content: flex-end;
+  }
 }
 .col-4 a {
   width: 3.2rem;
