--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -9,6 +9,17 @@
     align-items: center;
     flex-direction: column;
 
+    &-control {
+      width: 100%;
+    }
+
+    @media screen and (min-width: 1024px) {
+      width: 80%;
+      margin: 0 auto;
+      flex-direction: row;
+      align-items: flex-start;
+    }
+
     input[type="email"],
     button {
       width: 100%;
@@ -18,6 +29,26 @@
       border: none;
     }
 
+    @media screen and (min-width: 1024px) {
+      input[type="email"] {
+        width: 100%;
+      }
+
+      button {
+        width: 80%;
+        margin-left: 2rem;
+      }
+    }
+    @media screen and (min-width: 1024px) {
+      input[type="email"] {
+        width: 100%;
+      }
+
+      button {
+        width: 60%;
+        margin-left: 2rem;
+      }
+    }
     input:focus,
     input:active {
       outline: none;
@@ -37,6 +68,8 @@
       line-height: 0;
       margin-bottom: 2rem;
       font-size: 11px;
+      text-align: left;
+      margin-left: 3rem;
     }
 
     .validation-text.success {
