--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -114,17 +114,19 @@
   & p {
     margin: 1rem 0;
   }
-
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: 1000px) {
     margin: 0;
     display: flex;
     flex-direction: column;
-    padding-left: 10%;
+    padding-left: 5%;
     justify-content: flex-start;
 
     p {
       margin: 0;
     }
+  }
+  @media screen and (min-width: 1200px) {
+    padding-left: 10%;
   }
 }
 
