--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,11 +1,12 @@
 @use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
 
 .main-heading {
   font-family: $raleway-font;
   font-size: 2.4rem;
   font-weight: 700;
 
-  @media screen and (min-width: 1024px) {
+  @include respond(large) {
     width: 30%;
     margin: 0 auto;
   }
@@ -26,7 +27,7 @@
   }
 
   &__text {
-    color: darken($color: $white, $amount: 5%);
+    @include font-color($white, 5%);
   }
 }
 
@@ -36,7 +37,7 @@
   .feature__heading {
     margin-top: 5rem;
 
-    @media screen and (min-width: 1024px) {
+    @include respond(large) {
       font-size: 2.8rem;
       width: 80%;
       margin: 0;
@@ -44,7 +45,7 @@
   }
 
   p {
-    color: darken($color: $white, $amount: 5%);
+    @include font-color($white, 5%);
     margin-bottom: 2.5rem;
   }
 }
@@ -59,7 +60,7 @@
   }
 
   p {
-    color: darken($color: $white, $amount: 15%);
+    @include font-color($white, 15%);
     text-align: center;
     line-height: 1.8;
     margin-bottom: 3rem;
