--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -1,19 +1,18 @@
 @use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
 
 // Get started / Subscribe Section
 //------------------------------------
 .subscribe {
   .form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-center;
     flex-direction: column;
 
     &-control {
       width: 100%;
     }
 
-    @media screen and (min-width: 1024px) {
+    @include respond(large) {
       width: 80%;
       margin: 0 auto;
       flex-direction: row;
@@ -29,7 +28,7 @@
       border: none;
     }
 
-    @media screen and (min-width: 1024px) {
+    @include respond(large) {
       input[type="email"] {
         width: 100%;
       }
@@ -39,7 +38,7 @@
         margin-left: 2rem;
       }
     }
-    @media screen and (min-width: 1024px) {
+    @include respond(large) {
       input[type="email"] {
         width: 100%;
       }
@@ -55,7 +54,7 @@
     }
 
     input[type="email"]::placeholder {
-      color: darken($color: #fff, $amount: 40%);
+      @include font-color($white, 40%);
     }
 
     input[type="email"] {
