--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
 
 .navbar {
   width: 100%;
@@ -7,7 +8,7 @@
   align-items: center;
   margin-top: 2rem;
 
-  @media screen and (min-width: 769px) {
+  @include respond(medium) {
     width: 85%;
     max-width: 1440px;
     margin: 3.5rem auto 8rem;
@@ -16,7 +17,7 @@
   &__logo-box {
     flex-basis: 25%;
 
-    @media screen and (min-width: 769px) {
+    @include respond(medium) {
       flex-basis: 10%;
     }
   }
@@ -26,7 +27,7 @@
     display: flex;
     justify-content: space-between;
 
-    @media screen and (min-width: 769px) {
+    @include respond(medium) {
       justify-content: end;
 
       .navbar__item {
@@ -37,14 +38,15 @@
 
   &__link {
     font-family: $raleway-font;
-    color: darken($color: $white, $amount: 20%);
+
+    @include font-color($white, 20%);
     transition: all 0.3s;
 
     &:hover {
       color: $white;
     }
 
-    @media screen and (min-width: 769px) {
+    @include respond(medium) {
       font-size: 1.6rem;
     }
   }
