--- a/css/main.css
+++ b/css/main.css
@@ -109,13 +109,14 @@ body {
 }
 @media screen and (min-width: 1024px) {
   .main-heading {
-    width: 30%;
+    font-size: 4rem;
+    width: 60%;
     margin: 0 auto;
   }
 }
 @media screen and (min-width: 1600px) {
   .main-heading {
-    font-size: 3.5rem;
+    width: 40%;
   }
 }
 
@@ -124,6 +125,11 @@ body {
   font-weight: 700;
   color: white;
   margin: 2rem auto 1.5rem;
+}
+@media screen and (min-width: 1024px) {
+  .feature__heading {
+    font-size: 2rem;
+  }
 }
 .feature__text {
   color: #f2f2f2;
@@ -409,7 +415,7 @@ body {
   .header {
     background: url("../images/bg-curvy-desktop.svg");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100% 30%;
     background-position: bottom;
     padding-bottom: 6rem;
     display: flex;
@@ -446,13 +452,14 @@ body {
 }
 @media screen and (min-width: 1024px) {
   .header__intro-text {
-    width: 30%;
+    font-size: 1.7rem;
+    width: 40%;
     margin: 2.5rem auto;
   }
 }
 @media screen and (min-width: 1600px) {
   .header__intro-text {
-    width: 25%;
+    width: 30%;
   }
 }
 
