--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -7,12 +7,13 @@
   font-weight: 700;
 
   @include respond(large) {
-    width: 30%;
+    font-size: 4rem;
+    width: 60%;
     margin: 0 auto;
   }
 
-  @media screen and (min-width: 1600px) {
-    font-size: 3.5rem;
+  @include respond(very-large) {
+    width: 40%;
   }
 }
 
@@ -24,6 +25,10 @@
     font-weight: 700;
     color: $white;
     margin: 2rem auto 1.5rem;
+
+    @include respond(large) {
+      font-size: 2rem;
+    }
   }
 
   &__text {
