--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -13,7 +13,7 @@
   @include respond(large) {
     background: url("../images/bg-curvy-desktop.svg");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100% 30%;
     background-position: bottom;
 
     padding-bottom: 6rem;
@@ -50,12 +50,13 @@
     @include font-color($white, 5%);
 
     @include respond(large) {
-      width: 30%;
+      font-size: 1.7rem;
+      width: 40%;
       margin: 2.5rem auto;
     }
 
     @include respond(very-large) {
-      width: 25%;
+      width: 30%;
     }
   }
 }
